@@ -1,5 +1,7 @@
 #!/bin/bash
 
+source /usr/local/lib/datahub/wait_for_deps.sh
+
 # Add default URI (http) scheme if needed
 if ! echo $NEO4J_HOST | grep -q "://" ; then
     NEO4J_HOST="http://$NEO4J_HOST"
@@ -21,28 +23,6 @@ else
   ELASTICSEARCH_PROTOCOL=http
 fi
 
-WAIT_FOR_EBEAN=""
-if [[ $SKIP_EBEAN_CHECK != true ]]; then
-  if [[ $ENTITY_SERVICE_IMPL == ebean ]] || [[ -z $ENTITY_SERVICE_IMPL ]]; then
-    WAIT_FOR_EBEAN=" -wait tcp://$EBEAN_DATASOURCE_HOST "
-  fi
-fi
-
-WAIT_FOR_CASSANDRA=""
-if [[ $ENTITY_SERVICE_IMPL == cassandra ]] && [[ $SKIP_CASSANDRA_CHECK != true ]]; then
-  WAIT_FOR_CASSANDRA=" -wait tcp://$CASSANDRA_DATASOURCE_HOST "
-fi
-
-WAIT_FOR_KAFKA=""
-if [[ $SKIP_KAFKA_CHECK != true ]]; then
-  WAIT_FOR_KAFKA=" -wait tcp://$(echo $KAFKA_BOOTSTRAP_SERVER | sed 's/,/ -wait tcp:\/\//g') "
-fi
-
-WAIT_FOR_NEO4J=""
-if [[ $GRAPH_SERVICE_IMPL != elasticsearch ]] && [[ $SKIP_NEO4J_CHECK != true ]]; then
-  WAIT_FOR_NEO4J=" -wait $NEO4J_HOST "
-fi
-
 OTEL_AGENT=""
 if [[ $ENABLE_OTEL == true ]]; then
   OTEL_AGENT="-javaagent:opentelemetry-javaagent.jar "
@@ -52,6 +32,8 @@ PROMETHEUS_AGENT=""
 if [[ $ENABLE_PROMETHEUS == true ]]; then
   PROMETHEUS_AGENT="-javaagent:jmx_prometheus_javaagent.jar=4318:/datahub/datahub-gms/scripts/prometheus-config.yaml "
 fi
+
+export MANAGEMENT_SERVER_PORT="${MANAGEMENT_SERVER_PORT:-4319}"
 
 # JAR extraction optimization - extract to tmpfs for faster class loading
 JAR_EXTRACTION_OPTS=""
@@ -146,23 +128,42 @@ else
   JAR_EXTRACTION_OPTS="-jar /datahub/datahub-gms/bin/war.war"
 fi
 
-COMMON="
-    $WAIT_FOR_EBEAN \
-    $WAIT_FOR_CASSANDRA \
-    $WAIT_FOR_KAFKA \
-    $WAIT_FOR_NEO4J \
-    -timeout 240s \
-    java $JAVA_OPTS $JMX_OPTS \
-    $SPRING_PROFILE_OPTS \
-    $OTEL_AGENT \
-    $PROMETHEUS_AGENT \
-    -Dstats=unsecure \
-    $JAR_EXTRACTION_OPTS"
+# Hazelcast 5.x on Java 9+ needs JPMS access for JDK internals (performance; avoids startup warning).
+HAZELCAST_JVM_OPTS="--add-modules java.se --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.management/sun.management=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED"
+
+datahub_wait_begin
 
 if [[ $SKIP_ELASTICSEARCH_CHECK != true ]]; then
-  exec dockerize \
-    -wait $ELASTICSEARCH_PROTOCOL://$ELASTICSEARCH_HOST:$ELASTICSEARCH_PORT -wait-http-header "$ELASTICSEARCH_AUTH_HEADER" \
-    $COMMON
-else
-  exec dockerize $COMMON
+  datahub_wait_http "$ELASTICSEARCH_PROTOCOL://$ELASTICSEARCH_HOST:$ELASTICSEARCH_PORT" "$ELASTICSEARCH_AUTH_HEADER"
 fi
+
+if [[ $SKIP_EBEAN_CHECK != true ]]; then
+  if [[ $ENTITY_SERVICE_IMPL == ebean ]] || [[ -z $ENTITY_SERVICE_IMPL ]]; then
+    datahub_wait_tcp "tcp://${EBEAN_DATASOURCE_HOST}"
+  fi
+fi
+
+if [[ $ENTITY_SERVICE_IMPL == cassandra ]] && [[ $SKIP_CASSANDRA_CHECK != true ]]; then
+  datahub_wait_tcp "tcp://${CASSANDRA_DATASOURCE_HOST}"
+fi
+
+if [[ $SKIP_KAFKA_CHECK != true ]]; then
+  IFS=',' read -ra _kbs <<< "$KAFKA_BOOTSTRAP_SERVER"
+  for _kb in "${_kbs[@]}"; do
+    _kb="$(echo "$_kb" | sed 's/^[[:space:]]*//;s/[[:space:]]*$//')"
+    [[ -n "$_kb" ]] || continue
+    [[ "$_kb" == tcp://* ]] || _kb="tcp://${_kb}"
+    datahub_wait_tcp "$_kb"
+  done
+fi
+
+if [[ $GRAPH_SERVICE_IMPL != elasticsearch ]] && [[ $SKIP_NEO4J_CHECK != true ]]; then
+  datahub_wait_endpoint "$NEO4J_HOST"
+fi
+
+exec java $HAZELCAST_JVM_OPTS $JAVA_OPTS $JMX_OPTS \
+  $SPRING_PROFILE_OPTS \
+  $OTEL_AGENT \
+  $PROMETHEUS_AGENT \
+  -Dstats=unsecure \
+  $JAR_EXTRACTION_OPTS
